# ChangeLog for app-text/mecab
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/mecab/ChangeLog,v 1.7 2004/07/01 19:28:49 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> mecab-0.76.ebuild,
  mecab-0.77.ebuild:
  virtual/glibc -> virtual/libc

  22 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> mecab-0.76.ebuild:
  Stable on x86

*mecab-0.77 (18 Apr 2004)

  18 Apr 2004; <matsuu@gentoo.org> +metadata.xml, +mecab-0.77.ebuild:
  Version bumped.
  Added ~amd64 to KEYWORDS.

  12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> mecab-0.76.ebuild:
  Don't assign default to S; header fix

*mecab-0.76 (17 Aug 2003)

  17 Aug 2003; MATSUU Takuto <matsuu@gentoo.org> mecab-0.76.ebuild:
  initial import.
