@@ -1,6 +1,8 @@
-MD5 5dadddcba1edc74bb374f13482678e03 ChangeLog 793
-MD5 8a62be4e8e251c944d318512368d9c03 mecab-0.76.ebuild 810
-MD5 3b628d707992a417046539be4a990508 mecab-0.77.ebuild 848
+MD5 cbcefac662e743949d83e1cf87c9a77e mecab-0.77.ebuild 822
+MD5 37219659b7256ce4efeaa956d99bb53e mecab-0.76.ebuild 784
+MD5 193d12d2e7b24bbb15025f2f41498ff1 mecab-0.78.ebuild 822
+MD5 b579fff82b9d0ea13e07ddc3cc099c4c ChangeLog 955
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
 MD5 a2dc8681f8735ac4b850dd1fbd633341 files/digest-mecab-0.76 127
 MD5 907bc64dc413d591c77412446bf5f2a5 files/digest-mecab-0.77 127
+MD5 89d2c5718559030b51532b37db3d6baf files/digest-mecab-0.78 127
