@@ -1,0 +1,2 @@
+MD5 cf0245ae3653a97b8dc37107fbb417c2 mecab-0.78.tar.gz 343285
+MD5 18c37ad9d02aa79e9f9ce752ee4ecea6 ipadic-2.5.1.tar.gz 4212891
