@@ -1,11 +1,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/mecab/Attic/mecab-0.77.ebuild,v 1.3 2004/07/01 11:59:39 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/mecab/Attic/mecab-0.77.ebuild,v 1.4 2004/07/22 15:09:56 nakano Exp $
 
 MY_IPADIC="ipadic-2.5.1"
 DESCRIPTION="Yet Another Part-of-Speech and Morphological Analyzer"
-HOMEPAGE="http://cl.aist-nara.ac.jp/~taku-ku/software/mecab/"
-SRC_URI="http://cl.aist-nara.ac.jp/~taku-ku/software/mecab/src/${P}.tar.gz
+HOMEPAGE="http://chasen.org/~taku/software/mecab/"
+SRC_URI="http://chasen.org/~taku/software/mecab/src/${P}.tar.gz
 	http://chasen.aist-nara.ac.jp/stable/ipadic/${MY_IPADIC}.tar.gz"
 
 LICENSE="LGPL-2.1"
