@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/mecab/Attic/mecab-0.76.ebuild,v 1.6 2004/07/22 15:09:56 nakano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/mecab/Attic/mecab-0.78.ebuild,v 1.1 2004/07/22 15:09:56 nakano Exp $
 
 MY_IPADIC="ipadic-2.5.1"
 DESCRIPTION="Yet Another Part-of-Speech and Morphological Analyzer"
@@ -10,19 +10,24 @@ SRC_URI="http://chasen.org/~taku/software/mecab/src/${P}.tar.gz
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="x86 ~sparc ~ppc"
+KEYWORDS="~x86 ~sparc ~ppc ~amd64"
 IUSE=""
 
 DEPEND="virtual/libc
 	dev-lang/perl"
 
+src_unpack() {
+	unpack ${P}.tar.gz
+	cd ${S}/dic
+	unpack ${MY_IPADIC}.tar.gz
+}
+
 src_compile() {
-	ln -s ${WORKDIR}/${MY_IPADIC} dic/${MY_IPADIC}
 	econf || die
 	make || die
 }
 
-src_install () {
+src_install() {
 	make DESTDIR=${D} install || die
 	dodoc AUTHORS ChangeLog INSTALL NEWS README
 }
